@@ -1,4 +1,4 @@
-.TH HDPARM 8 "January 2009" "Version 9.9"
+.TH HDPARM 8 "January 2009" "Version 9.10"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
